# RIS_projects

class1_qt/: class1_qt.pro  class1_qt.pro.user.21  dialog.cpp  dialog.h  form.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  masterthread.h  msg.h  usb_communication.cpp  usb_communication.h
control_4ws4wd/: CMakeLists.txt  README.md  package.xml
control_4ws4wd-master/control_4ws4wd/referenceFile/: 4WSWD小车操作手册.docx
control_4ws4wd/include/chassis_4ws4wd/: chassis_4ws4wd.h
control_4ws4wd/include/deal_cmd/: deal_cmd.h
control_4ws4wd/include/mbot_teleop/: pid.h
control_4ws4wd/include/tcp_client/: class_tcp.h
control_4ws4wd/launch/: chassis_4ws4wd.launch  four_wheel_steering.launch
control_4ws4wd/msg/: msg_chassis.msg
control_4ws4wd/referenceFile/: 4wd_frame.xlsx
control_4ws4wd/src/: chassis_4ws4wd.cpp  chassis_4ws4wd_node.cpp  class_tcp.cpp  deal_cmd.cpp  fourSteering_node.cpp
joy/: joy_node.cpp
pro_control_4ws4wd/control_4ws4wd/: CMakeLists.txt
pro_control_4ws4wd/control_4ws4wd/include/chassis_4ws4wd/: chassis_4ws4wd.h
pro_control_4ws4wd/control_4ws4wd/src/: chassis_4ws4wd.cpp  chassis_4ws4wd_node.cpp
pro_debug/: readme.md
pro_debug/debug_motor/: CMakeLists.txt  package.xml
pro_debug/debug_motor/cfg/: testMotor.cfg
pro_debug/debug_motor/include/debug_motor/: d_motor.h
pro_debug/debug_motor/include/motor_test/: motor_test.h
pro_debug/debug_motor/launch/: ws_motor_test.launch
pro_debug/debug_motor/msg/: debugMotorData.msg
pro_debug/debug_motor/src/: d_motor.cpp  motor_test.cpp
pro_debug/debug_motor/src/nodes/: d_motor_node.cpp  m_test_node.cpp
pro_debug/log/motor_log/: code_revise.md
pro_debug/log/motor_log/20201123log/: 2020-11-24-01-39-54.bag  2020-11-24-01-43-58.bag
pro_debug/log/tcp2can_test_log/: log.md
pro_debug/manual/: ws2500传输协议20201126.xlsx
pro_debug/manual/in-wheel-motor_manual/: 标定参数工具开发说明_（可忽略疑问）.docx  标定量存储地址.xlsx  驱动器技术协议20200428-坦帕科技.DOC
pro_debug/manual/suspension_manual/: suspension_question.docx  油气弹簧相关问题解答.docx
pro_debug/manual/suspension_manual/low-level code/: 悬架测试20201201（update control logic).gx3
pro_debug/plc_test/: CMakeLists.txt  package.xml
pro_debug/plc_test/cfg/: plcTest.cfg
pro_debug/plc_test/include/plc_test/: plc_test.h
pro_debug/plc_test/include/ws_tcp/: wrap_tcp.h
pro_debug/plc_test/launch/: plc_test_launch.launch  tools.launch
pro_debug/plc_test/msg/: testPlcData.msg
pro_debug/plc_test/src/: plc_test.cpp  wrap_tcp.cpp
pro_debug/plc_test/src/nodes/: plc_test_node.cpp
pro_debug_motor/: readme.md
pro_debug_motor/debug_motor/: CMakeLists.txt  package.xml
pro_debug_motor/debug_motor/cfg/: debugMotor.cfg
pro_debug_motor/debug_motor/include/debug_motor/: d_motor.h
pro_debug_motor/debug_motor/launch/: c++_debug_motor.launch
pro_debug_motor/debug_motor/msg/: debugMotorData.msg
pro_debug_motor/debug_motor/src/: d_motor.cpp
pro_debug_motor/manual/: .~lock.驱动器技术协议20200428-坦帕科技.DOC#  轮毂电机技术协议0428.DOC
transfor_joy/launch/: transfor_joy.launch
ws2500/auto_start/: CMakeLists.txt  package.xml
ws2500/auto_start/launch/: auto_start.launch  auto_startup_roslaunch.sh
ws2500/sixwheel_chassis_control/: CMakeLists.txt  package.xml
ws2500/sixwheel_chassis_control/include/tcp_client/: AsyncClient.h  class_tcp.h
ws2500/sixwheel_chassis_control/launch/: TCP2CAN.launch  four_wheel_steering.launch  ws2500_chassis.launch
ws2500/sixwheel_chassis_control/src/: brake.cpp  class_tcp.cpp  cmd_vel_to_current_node.cpp  suspension_control.cpp  ws2500_chassis_node.cpp
ws2500/transfor_joy/: CMakeLists.txt
ws2500/transfor_joy/launch/: config.sh  g29.launch  kobuki.launch  transfor_joy.launch
ws2500/transfor_joy/scripts/: install.sh
ws2500/transfor_joy/src/: transfor_joy.cpp
ws2500/ws_chassis_control/: CMakeLists.txt  package.xml
ws2500/ws_chassis_control/include/ws_motor/: ws_motor.h
ws2500/ws_chassis_control/include/ws_suspension/: ws_suspension.h
ws2500/ws_chassis_control/launch/: ws_motor_launch.launch  ws_suspension_launch .launch
ws2500/ws_chassis_control/msg/: wsMotorData.msg  wsSuspensionData.msg
ws2500/ws_chassis_control/src/: wrap_tcp.cpp  ws_motor.cpp  ws_suspension.cpp
ws2500/ws_chassis_control/src/nodes/: ws_motor_node.cpp  ws_suspension_node.cpp
